--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -14,13 +14,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.wrapper {
+  width: fit-content;
+  margin: 40px auto;
+  text-align: center;
+  border: #1a1a1a 1px solid;
 }
 
 body {
