--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -2,32 +2,22 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
-
-.board-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    border: #1a1a1a 1px solid;
-  
-}
-
 .page-wrapper {
-  width: fit-content;
-  /* margin: 40px auto; */
+  width: 100%;
+  margin: 40px auto;
+  padding: 40px;
   text-align: center;
-  border: red 1px solid;
-
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5); /* đặt độ mờ là 50% */
+  opacity: 1;
+  border-radius: 30px;
+}
+.board-wrapper {
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
 
 body {
@@ -36,10 +26,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('./assets/bg.jpg');
+  background-size: cover;
 }
 
 h1 {
   font-size: 3.2em;
+  color: #49ff58;
   line-height: 1.1;
 }
 
@@ -78,7 +71,8 @@ button:focus-visible {
 .turn {
   display: flex;
   justify-content: center;
-  margin: 15px auto;
+  margin: 40px auto;
+  margin-bottom: 1px;
   width: fit-content;
   position: relative;
   border-radius: 10px;
@@ -105,7 +99,7 @@ button:focus-visible {
 
 .turn::after {
   position: absolute;
-  content: "";
+  content: '';
   width: 50%;
   height: 100%;
   top: 0;
@@ -167,4 +161,27 @@ button:focus-visible {
   border-radius: 10px;
   display: flex;
   gap: 15px;
+}
+
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg, #231557 0%, #44107a 29%, #ff1361 67%, #fff800 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  /* display: inline-block; */
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
